airtime (1.8.0-1) 64studio; urgency=low

  * upstream 1.8.0 release

 -- Robin Gareus <robin@gareus.org>  Tue, 19 Apr 2011 15:44:40 +0200

airtime (1.7.0-2) 64studio; urgency=low

  * fixed few lintian warnings
  * allow to de-install apache 000default

 -- Robin Gareus <robin@gareus.org>  Tue, 05 Apr 2011 20:45:52 +0200

airtime (1.7.0-1) 64studio; urgency=low

  * upstream 1.7.0-GA release

 -- Robin Gareus <robin@gareus.org>  Mon, 04 Apr 2011 21:19:56 +0200

airtime (1.6.1-1) 64studio; urgency=low

  * initial package

 -- Robin Gareus <robin@gareus.org>  Sat, 02 Apr 2011 22:48:35 +0200