@@ -17,7 +17,6 @@ Depends: apache2 | httpd,
  php5-curl,
  php-pear,
  curl,
- openssl, 
  wwwconfig-common,
  daemontools,
  daemontools-run,
