@@ -1,4 +1,9 @@
 #!/usr/bin/make -f
 
+override_dh_shlibdeps:
+	dh_makeshlibs
+	-dh_shlibdeps -- --ignore-missing-info
+
 %:
 	dh $@
+
