@@ -1,3 +1,15 @@
+airtime (1.8.2-1) 64studio; urgency=low
+
+  * upstream 1.8.2-RC2 release
+
+ -- Robin Gareus <robin@gareus.org>  Wed, 01 Jun 2011 16:21:40 +0200
+
+airtime (1.8.1-1) 64studio; urgency=low
+
+  * upstream 1.8.1 release
+
+ -- Robin Gareus <robin@gareus.org>  Wed, 11 May 2011 22:50:03 +0200
+
 airtime (1.8.0-1) 64studio; urgency=low
 
   * upstream 1.8.0 release
